2008-05-20  fabien  <fabien@sonappart.net>

	* GormCore/GormObjectEditor.m: add draggingExited: to implement autoscrolling
	during IBAction connections. 

2008-05-18 19:16-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.m: Correct segfault.  Remove unecessary
	call to removeFromSuperview for the selection box from 
	GormDocument window.

2008-05-18  fabien  <fabien@sonappart.net>

	* Palettes/3Containers/GormTabViewAttributesInspector.h: 
	Add itemPrevious and itemNext outlets
	* Palettes/3Containers/GormTabViewInspector.gorm: 
	Add itemPrevious and itemNext outlets
	* Palettes/3Containers/GormTabViewInspector.gorm: 
	Implement NSTabView items ordering in ok:

2008-05-16 20:47-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormPluginManager.h
	* GormCore/GormPluginManager.m: Added manager class.

2008-05-16 20:46-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormPlugin.h
	* GormCore/GormPlugin.m: plugin class for gorm plugins.

2008-05-16 20:41-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile: Added plugins as resources.
	* GormCore/GNUmakefile: Remove classes from file
	* GormCore/GormGModelWrapperLoader.m
	* GormCore/GormGormWrapperBuilder.m
	* GormCore/GormGormWrapperLoader.m
	* GormCore/GormNibWrapperBuilder.m
	* GormCore/GormNibWrapperLoader.m: Removed the loaders from GormCore.
	* GormCore/GormProtocol.h: Added a new method.
	* GormLib/IBPlugin.m: Added implementations to some of the methods.
	* Gorm.m: Added a "pluginManager" method.
	* Palettes/1Windows/GNUmakefile.preamble
	* Palettes/2Controls/GNUmakefile.preamble
	* Palettes/3Containers/GNUmakefile.preamble
	* Palettes/4Data/GNUmakefile.preamble: Corrected issue with all
	of the palette makefiles pointing to the wrong name.
	* Plugins/GModel/GNUmakefile
	* Plugins/GModel/GNUmakefile.preamble
	* Plugins/GModel/GormGModelPlugin.m
	* Plugins/GModel/GormGModelWrapperLoader.h